--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  # service Locator
+  # Injection
   get_it: ^5.0.3
   # Block for state management
   flutter_bloc: ^6.1.1
